# duck_v1_server

duck_bringup/: package.xml  setup.cfg  setup.py
duck_bringup/launch/: bringup.launch.py  duck_full_stack.launch.py
duck_localization/: package.xml  setup.cfg  setup.py
duck_localization/config/: ekf.yaml
duck_localization/launch/: global_localization.launch.py
duck_localization/maps/: small_house.yaml
duck_mapping/: package.xml  setup.cfg  setup.py
duck_mapping/launch/: slam.launch.py
duck_mapping/maps/small_house/: small_house.pgm
duck_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
duck_motion/duck_motion/: pd_motion_planner.py  pure_pursuit.py
duck_motion/include/duck_motion/: pd_motion_planner.hpp  pure_pursuit.hpp
duck_motion/src/: pd_motion_planner.cpp  pure_pursuit.cpp
duck_nav2_config/: CMakeLists.txt  package.xml
duck_nav2_config/config/: nav2_params.yaml  nav2_params.yaml.bak  nav2_params.yaml.claud.bak  planner_server.yaml  planner_server_test.yaml  smoother_server.yaml
duck_nav2_config/launch/: duck_nav2_launch.py  duck_nav2_launch.py.BAK
duck_nav2_config/scripts/: twist_to_twist_stamped_republisher.py
duck_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
duck_planning/include/bumperbot_planning/: a_star_planner.hpp  dijkstra_planner.hpp
duck_planning/include/duck_planning/: a_star_planner.hpp  (+1 more)
duck_planning/src/: a_star_planner.cpp  dijkstra_planner.cpp
temp/: co.txt  duck_teleop.py  frames_2025-12-26_15.37.23.gv  imu_to_pose.py  path_to_smoother.py  pure_pursuit.py
